// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init with find gql object 1`] = `
Object {
  "args": Array [
    "advisor.0.profile.display_name",
    "new_displayName",
  ],
}
`;

exports[`init with find gql object 2`] = `
Object {
  "args": Array [
    "advisor list",
    CollectionMixins [
      AdvisorModel {},
    ],
  ],
}
`;

exports[`init with find gql object 3`] = `
Object {
  "args": Array [
    "advs",
    "new_displayName",
  ],
}
`;

exports[`init with find gql object 4`] = `
Object {
  "args": Array [
    "transactions.length",
    2,
  ],
}
`;

exports[`init with find gql string 1`] = `
Object {
  "args": Array [
    "advisor.0.profile.display_name",
    "new_displayName",
  ],
}
`;

exports[`init with find gql string 2`] = `
Object {
  "args": Array [
    "advisor list",
    CollectionMixins [
      AdvisorModel {},
    ],
  ],
}
`;

exports[`init with find gql string 3`] = `
Object {
  "args": Array [
    "advs",
    "new_displayName",
  ],
}
`;

exports[`init with find gql string 4`] = `
Object {
  "args": Array [
    "transactions(limit:2).length",
    2,
  ],
}
`;

exports[`init with find gql string 5`] = `
Object {
  "args": Array [
    "transactions(limit:6).length",
    6,
  ],
}
`;

exports[`list advisors 1`] = `
Object {
  "args": Array [
    "list advisors",
    CollectionMixins [
      AdvisorModel {},
      AdvisorModel {},
      AdvisorModel {},
      AdvisorModel {},
      AdvisorModel {},
      AdvisorModel {},
    ],
  ],
}
`;
